add compiler flags -ffreestanding, -nostdlib
This tells gcc much more explicitly that we intend to build something
that looks a lot more like an OS kernel than a typical application.

--- a/flicker/pal/Makefile
+++ b/flicker/pal/Makefile
@@ -12,6 +12,7 @@ LD=ld
 OBJCOPY=objcopy
 
 CFLAGS := -Wall -Werror -O2 -std=gnu99 -m32 -march=i686
+CFLAGS += -ffreestanding -nostdlib 
 CFLAGS += -fno-builtin -fno-common -fno-strict-aliasing
 CFLAGS += -fomit-frame-pointer
 CFLAGS += -I$(CURDIR)/../include
